--- a/HMS/HMS.csproj
+++ b/HMS/HMS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.10" />
+	  <PackageReference Include="EntityFramework" Version="6.4.4" />
+	  <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+	  <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+	  <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1" />
     <PackageReference Include="MySqlConnector" Version="2.3.1" />
   </ItemGroup>
 
