JWT Tokens added in backend & frontend

--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -2,7 +2,7 @@
   "JwtSettings": {
     "Issuer": "localhost",
     "Audience": "localhost",
-    "Key": "JwtSecretKey"
+    "Key": "JwtSecretKeysdsjkasdldjalksdljadadsda"
   },
 
   "Logging": {
