--- a/HMS/HMS.csproj
+++ b/HMS/HMS.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.10" />
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
     <PackageReference Include="MySqlConnector" Version="2.3.1" />
   </ItemGroup>
 
