--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "JwtSettings": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "Key": "JwtSecretKeysdsjkasdldjalksdljadadsda"
+  },
+
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
