--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -5,6 +5,13 @@
     "Key": "JwtSecretKeysdsjkasdldjalksdljadadsda"
   },
 
+  "ApplicationSettings": {
+    "Neo4jConnection": "neo4j+s://07a963f9.databases.neo4j.io",
+    "Neo4jUser": "neo4j",
+    "Neo4jPassword": "QlofL24P9k4fIbxjfnj7rwr5dvtZP4eahW7zem7vu-s",
+    "Neo4jDatabase": "neo4j"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
