neo4j settings added and used in database.cs

--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -5,7 +5,7 @@
     "Key": "JwtSecretKeysdsjkasdldjalksdljadadsda"
   },
 
-  "ApplicationSettings": {
+  "Neo4jSettings": {
     "Neo4jConnection": "neo4j+s://07a963f9.databases.neo4j.io",
     "Neo4jUser": "neo4j",
     "Neo4jPassword": "QlofL24P9k4fIbxjfnj7rwr5dvtZP4eahW7zem7vu-s",
