Github action secrets

--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -1,3 +1,34 @@
 {
+  "JwtSettings": {
+    "Issuer": "${JWT_ISSUER}",
+    "Audience": "${JWT_AUDIENCE}",
+    "Key": "${JWT_KEY}"
+  },
 
+  "MySql": {
+    "MySqlRead": "Server=${MYSQL_READ}",
+    "MySqlWrite": "Server=${MYSQL_WRITE}",
+    "MySqlReadWrite": "Server=${MYSQL_READWRITE}",
+    "MySqlAdmin": "Server=${MYSQL_ADMIN}"
+  },
+
+  "MongoDB": {
+    "Connection": "${MONGODB_CONN}"
+  },
+
+  "Neo4jSettings": {
+    "Neo4jConnection": "${NEO4J_CONN}",
+    "Neo4jUser": "${NEO4J_USER}",
+    "Neo4jPassword": "${NEO4J_PASSWORD}",
+    "Neo4jDatabase": "${NEO4J_DATABASE}"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
