--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -1,26 +1,26 @@
 {
   "JwtSettings": {
-    "Issuer": "${{ JWT_ISSUER }}",
-    "Audience": "${{ JWT_AUDIENCE }}",
-    "Key": "${{ JWT_KEY }}"
+    "Issuer": "${{ secrets.JWT_ISSUER }}",
+    "Audience": "${{ secrets.JWT_AUDIENCE }}",
+    "Key": "${{ secrets.JWT_KEY }}"
   },
 
   "MySql": {
-    "MySqlRead": "Server=${{ MYSQL_READ }}",
-    "MySqlWrite": "Server=${{ MYSQL_WRITE }}",
-    "MySqlReadWrite": "Server=${{ MYSQL_READWRITE }}",
-    "MySqlAdmin": "Server=${{ MYSQL_ADMIN }}"
+    "MySqlRead": "Server=${{ secrets.MYSQL_READ }}",
+    "MySqlWrite": "Server=${{ secrets.MYSQL_WRITE }}",
+    "MySqlReadWrite": "Server=${{ secrets.MYSQL_READWRITE }}",
+    "MySqlAdmin": "Server=${{ secrets.MYSQL_ADMIN }}"
   },
 
   "MongoDB": {
-    "Connection": "${{ MONGODB_CONN }}"
+    "Connection": "${{ secrets.MONGODB_CONN }}"
   },
 
   "Neo4jSettings": {
-    "Neo4jConnection": "${{ NEO4J_CONN }}",
-    "Neo4jUser": "${{ NEO4J_USER }}",
-    "Neo4jPassword": "${{ NEO4J_PASSWORD }}",
-    "Neo4jDatabase": "${{ NEO4J_DATABASE }}"
+    "Neo4jConnection": "${{ secrets.NEO4J_CONN }}",
+    "Neo4jUser": "${{ secrets.NEO4J_USER }}",
+    "Neo4jPassword": "${{ secrets.NEO4J_PASSWORD }}",
+    "Neo4jDatabase": "${{ secrets.NEO4J_DATABASE }}"
   },
 
   "Logging": {
