--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -27,8 +27,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
            fetch-depth: 0
-
-      - name: Build and Test
+      - name: Debug Secrets
         run: |
-          dotnet build
-          dotnet test
+            echo "JWT_KEY: $JWT_KEY"
+            echo "MYSQL_READ: $MYSQL_READ"    
+            echo "NEO4J_CONN: $NEO4J_CONN"
+      #- name: Build and Test
+       # run: |
+        #  dotnet build
+         # dotnet test
