--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -27,11 +27,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
            fetch-depth: 0
-      - name: Debug Secrets
+      - name: Debug Environment Variables
         run: |
-            echo "JWT_KEY: $JWT_KEY"
-            echo "MYSQL_READ: $MYSQL_READ"    
-            echo "NEO4J_CONN: $NEO4J_CONN"
+            Get-ChildItem Env: | Sort-Object Name
+
       #- name: Build and Test
        # run: |
         #  dotnet build
