setup.yml debug

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -29,7 +29,14 @@ jobs:
            fetch-depth: 0
       - name: Debug Environment Variables
         run: |
-            Get-ChildItem Env: | Sort-Object Name
+            echo "JWT_KEY: $JWT_KEY"
+            echo "MYSQL_READ: $MYSQL_READ"
+            echo "NEO4J_CONN: $NEO4J_CONN"
+        shell: pwsh
+        env:
+            JWT_KEY: ${{ secrets.JWT_KEY }}
+            MYSQL_READ: ${{ secrets.MYSQL_READ }}
+            NEO4J_CONN: ${{ secrets.NEO4J_CONN }}
 
       #- name: Build and Test
        # run: |
