--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -12,5 +12,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-    #  - name: Test
-    #    run: dotnet test
+      - name: Set up environment variables
+        run: |
+          echo "JWT_ISSUER=${{ secrets.JWT_ISSUER }}" >> $GITHUB_ENV
+          echo "JWT_AUDIENCE=${{ secrets.JWT_AUDIENCE }}" >> $GITHUB_ENV
+          echo "JWT_KEY=${{ secrets.JWT_KEY }}" >> $GITHUB_ENV
+          echo "MYSQL_READ=${{ secrets.MYSQL_READ }}" >> $GITHUB_ENV
+          echo "MYSQL_WRITE=${{ secrets.MYSQL_WRITE }}" >> $GITHUB_ENV
+          echo "MYSQL_READWRITE=${{ secrets.MYSQL_READWRITE }}" >> $GITHUB_ENV
+          echo "MYSQL_ADMIN=${{ secrets.MYSQL_ADMIN }}" >> $GITHUB_ENV
+          echo "MONGODB_CONN=${{ secrets.MONGODB_CONN }}" >> $GITHUB_ENV
+          echo "NEO4J_CONN=${{ secrets.NEO4J_CONN }}" >> $GITHUB_ENV
+          echo "NEO4J_USER=${{ secrets.NEO4J_USER }}" >> $GITHUB_ENV
+          echo "NEO4J_PASSWORD=${{ secrets.NEO4J_PASSWORD }}" >> $GITHUB_ENV
+          echo "NEO4J_DATABASE=${{ secrets.NEO4J_DATABASE }}" >> $GITHUB_ENV
+
+      - name: Test
+        run: dotnet test
