--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/checkout@v2
 
       
-      - name: view the secrets context
-        shell: bash
-        run: echo "${{ secrets.MYSECRET }}"
+      - name: Test environment variable
+        run: |
+          echo "MYSECRET=${{ secrets.MYSECRET }}" >> $GITHUB_ENV
+
           
       - name: Test
         run: dotnet test
