--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -13,10 +13,21 @@ jobs:
       - uses: actions/checkout@v2
 
       
-      - name: Test environment variable
+      - name: Test environment variables
         run: |
           echo "MYSECRET="${{ secrets.MYSECRET }}"" >> $GITHUB_ENV
-
+          echo "MYSECRET="${{ secrets.JWT_ISSUER }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.JWT_AUDIENCE }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.JWT_KEY }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.MYSQL_READ }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.MYSQL_WRITE }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.MYSQL_READWRITE }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.MYSQL_ADMIN }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.MONGODB_CONN }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.NEO4J_USER }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.NEO4J_PASSWORD }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.NEO4J_DATABASE }}"" >> $GITHUB_ENV
+          echo "MYSECRET="${{ secrets.NEO4J_CONN }}"" >> $GITHUB_ENV
           
       - name: Test
         run: dotnet test
