--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "MySql": {
-    "MySqlRead": "Server=${{ secrets.MYSQL_READ }}",
+    "MySqlRead": "${{ secrets.MYSQL_READ }}",
     "MySqlWrite": "Server=${{ secrets.MYSQL_WRITE }}",
     "MySqlReadWrite": "Server=${{ secrets.MYSQL_READWRITE }}",
     "MySqlAdmin": "Server=${{ secrets.MYSQL_ADMIN }}"
