--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Test environment variables
         run: |
           echo "MYSECRET="${{ secrets.MYSECRET }}"" >> $GITHUB_ENV
-          
+          echo "MYSQL_READ"${{ secrets.MYSQL_READ }}"" >> $GITHUB_ENV
           
       - name: Test
         run: dotnet test
