--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Test environment variables
         run: |
           echo "MYSECRET="${{ secrets.MYSECRET }}"" >> $GITHUB_ENV
-          echo "MYSQL_READ"${{ secrets.MYSQL_READ }}"" >> $GITHUB_ENV
+          echo "NEO4J_CONN"${{ secrets.NEO4J_CONN }}"" >> $GITHUB_ENV
+          echo "NEO4J_USER"${{ secrets.NEO4J_USER }}"" >> $GITHUB_ENV
+          echo "NEO4J_PASSWORD"${{ secrets.NEO4J_PASSWORD }}"" >> $GITHUB_ENV
           
       - name: Test
         run: dotnet test
