--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -20,6 +20,6 @@ jobs:
           echo "NEO4J_USER="${{ secrets.NEO4J_USER }}"" >> $GITHUB_ENV
           echo "NEO4J_PASSWORD="${{ secrets.NEO4J_PASSWORD }}"" >> $GITHUB_ENV
           echo "MYSQL_READ="${{ secrets.MYSQL_READ }}"" >> $GITHUB_ENV 
-          
+          echo "MONGODB_CONN="${{ secrets.MONGODB_CONN }}"" >> $GITHUB_ENV
       - name: Test
         run: dotnet test
