--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -25,6 +25,9 @@ jobs:
           echo "MYSQL_READWRITE="${{ secrets.MYSQL_READWRITE }}"" >> $GITHUB_ENV
           echo "MYSQL_ADMIN="${{ secrets.MYSQL_ADMIN }}"" >> $GITHUB_ENV
           echo "MONGODB_CONN="${{ secrets.MONGODB_CONN }}"" >> $GITHUB_ENV
+          echo "JWT_ISSUER="${{ secrets.JWT_ISSUER }}"" >> $GITHUB_ENV
+          echo "JWT_AUDIENCE="${{ secrets.JWT_AUDIENCE }}"" >> $GITHUB_ENV
+          ehco "JWT_KEY="${{ secrets.JWT_KEY }}"" >> $GITHUB_ENV
           
       - name: Test
         run: dotnet test
