--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -27,7 +27,7 @@ jobs:
           echo "MONGODB_CONN="${{ secrets.MONGODB_CONN }}"" >> $GITHUB_ENV
           echo "JWT_ISSUER="${{ secrets.JWT_ISSUER }}"" >> $GITHUB_ENV
           echo "JWT_AUDIENCE="${{ secrets.JWT_AUDIENCE }}"" >> $GITHUB_ENV
-          ehco "JWT_KEY="${{ secrets.JWT_KEY }}"" >> $GITHUB_ENV
+          echo "JWT_KEY="${{ secrets.JWT_KEY }}"" >> $GITHUB_ENV
           
       - name: Test
         run: dotnet test
