--- a/HMS/ClientApp/package.json
+++ b/HMS/ClientApp/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "ajv": "^8.12.0",
     "cross-env": "^7.0.3",
+    "cypress": "^13.6.1",
     "eslint": "^8.39.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
