--- a/HMS/HMS.csproj
+++ b/HMS/HMS.csproj
@@ -25,9 +25,18 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="ClientApp\Cypress\Integration\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\Cypress\Integration\**" />
+    <EmbeddedResource Remove="ClientApp\Cypress\Integration\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="ClientApp\Cypress\Integration\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\Cypress\e2e\" />
+    <Folder Include="ClientApp\Cypress\support\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
