--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,20 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Environment variables
+        run: |
+          echo "MYSECRET="${{ secrets.MYSECRET }}"" >> $GITHUB_ENV
+          echo "NEO4J_CONN="${{ secrets.NEO4J_CONN }}"" >> $GITHUB_ENV
+          echo "NEO4J_USER="${{ secrets.NEO4J_USER }}"" >> $GITHUB_ENV
+          echo "NEO4J_PASSWORD="${{ secrets.NEO4J_PASSWORD }}"" >> $GITHUB_ENV
+          echo "MYSQL_READ="${{ secrets.MYSQL_READ }}"" >> $GITHUB_ENV
+          echo "MYSQL_WRITE="${{ secrets.MYSQL_WRITE }}"" >> $GITHUB_ENV
+          echo "MYSQL_READWRITE="${{ secrets.MYSQL_READWRITE }}"" >> $GITHUB_ENV
+          echo "MYSQL_ADMIN="${{ secrets.MYSQL_ADMIN }}"" >> $GITHUB_ENV
+          echo "MONGODB_CONN="${{ secrets.MONGODB_CONN }}"" >> $GITHUB_ENV
+          echo "JWT_ISSUER="${{ secrets.JWT_ISSUER }}"" >> $GITHUB_ENV
+          echo "JWT_AUDIENCE="${{ secrets.JWT_AUDIENCE }}"" >> $GITHUB_ENV
+          echo "JWT_KEY="${{ secrets.JWT_KEY }}"" >> $GITHUB_ENV
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
