Render and settings pushed for hosting

--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -1,3 +1,34 @@
 {
+  "JwtSettings": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "Key": "JwtSecretKeysdsjkasdldjalksdljadadsda"
+  },
 
+  "MySql": {
+    "MySqlRead": "Server=hms3.mysql.database.azure.com; User ID=hmsread; Password=hms1234!; Database=hms3",
+    "MySqlWrite": "Server=hms3.mysql.database.azure.com; User ID=hmswrite; Password=hms1234!; Database=hms3",
+    "MySqlReadWrite": "Server=hms3.mysql.database.azure.com; User ID=hmsreadwrite; Password=hms1234!; Database=hms3",
+    "MySqlAdmin": "Server=hms3.mysql.database.azure.com; User ID=hospitalmangementsystem; Password=hms1234!; Database=hms3"
+  },
+
+  "MongoDB": {
+    "Connection": "mongodb+srv://hms_admin:vGaQGWA85GqRofPf@hms.eigi1od.mongodb.net/?retryWrites=true&w=majority"
+  },
+
+  "Neo4jSettings": {
+    "Neo4jConnection": "neo4j+s://07a963f9.databases.neo4j.io",
+    "Neo4jUser": "neo4j",
+    "Neo4jPassword": "QlofL24P9k4fIbxjfnj7rwr5dvtZP4eahW7zem7vu-s",
+    "Neo4jDatabase": "neo4j"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
