understøtter nu mysql localhost. husk at oprette de 3 mysql brugere - hmsread, hmswrite, hmsreadwrite.

--- a/HMS/appsettings.json
+++ b/HMS/appsettings.json
@@ -12,6 +12,13 @@
     "MySqlAdmin": "Server=hms3.mysql.database.azure.com; User ID=hospitalmangementsystem; Password=hms1234!; Database=hms3"
   },
 
+  "MySqlLocalHost": {
+    "MySqlRead": "Server=localhost; User ID=hmsread; Password=hms1234!; Database=hms",
+    "MySqlWrite": "Server=localhost; User ID=hmswrite; Password=hms1234!; Database=hms",
+    "MySqlReadWrite": "Server=localhost; User ID=hmsreadwrite; Password=hms1234!; Database=hms",
+    "MySqlAdmin": "Server=localhost; User ID=hospitalmanagementsystem; Password=hms1234!; Database=hms"
+  },
+
   "MongoDB": {
     "Connection": "mongodb+srv://hms_admin:vGaQGWA85GqRofPf@hms.eigi1od.mongodb.net/?retryWrites=true&w=majority"
   },
