--- a/HMS/HMS.csproj
+++ b/HMS/HMS.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Neo4j.Driver" Version="5.15.0" />
     <PackageReference Include="Neo4j.Driver.Simple" Version="5.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
